# intercomtags

./: .gitignore  Cargo.toml  README.md  build-dmg.sh
assets/: AppIcon.icns  create-icon.sh  set-dmg-icon.sh
src/: app.rs  app_en.rs  config.rs  file_parser.rs  intercom.rs  main.rs
